# librist

./: .gitlab-ci.yml  meson.build  meson_options.txt
include/librist/: librist.h  librist_config.h  receiver.h  sender.h
src/: config.h  logging.c  rist-common.c  rist-private.h  stats.c  udp.c  vcs_version.h
src/proto/: gre.c
subprojects/: .gitignore
tools/: meson.build  ristreceiver.c  ristsender.c
